[project]
name = "helltml"
version = "0.0.1"
authors = [
  { name="WazWazTheDeveloper", email="wazwazman1@gmail.com" },
]
description = "Write you frontend using YAML"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"PyYAML==6.0.1",
"typer==0.12.3"
]

[project.urls]
Homepage = "https://github.com/WazWazTheDeveloper/HellTML"
Issues = "https://github.com/WazWazTheDeveloper/HellTML/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"